<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Invoice Total</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_invoice_total">Invoice Total</string>
    
    <string name="subtotal_label">Subtotal</string>
    <string name="discount_percent_label">Discount Percent</string>
    <string name="discount_amount_label">Discount Amount</string>
    <string name="total_label">Total</string>
    
    <string name="subtotal">150</string>
    <string name="discount_percent">10%</string>
    <string name="discount_amount">$0.00</string>
    <string name="total">$0.00</string>

</resources>